--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
     <div class="left">
         <div class="logo">
-            <img src="./images/odin-logo.png" alt="">
+            <img src="./images/odin-logo.png" alt="odin logo">
             <h1>Odin</h1>
         </div>
     </div>
