--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <p>You <em>know</em> you want it.</p>
         </div>
         <form action="#">
-            <h1>Let's do this!</h1>
-            <fieldset>
+            <h2>Let's do this!</h2>
+            <div class="inputs">
                 <div class="input">
                     <label for="first-name">FIRST NAME</label>
                     <input type="text" id="first-name" name="first-name" required minlength="2" maxlength="20">
@@ -45,10 +45,12 @@
                     <label for="confirm-password">CONFIRM PASSWORD</label>
                     <input type="password" id="confirm-password" name="confirm-password" required minlength="8" maxlength="20">
                 </div>
-            </fieldset>
+            </div>
         </form>
-        <button>Create account</button>
-        <p>Already have an account? <a href="#">Log in</a></p>
+        <div class="bottom-right">
+            <button>Create account</button>
+            <p>Already have an account? <a href="#">Log in</a></p>
+        </div>
     </div>
 </body>
 </html>
